--- a/solution/src/index.css
+++ b/solution/src/index.css
@@ -10,4 +10,5 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: .5rem;
+    grid-auto-rows: 1fr;
 }
